--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "uuid": "^8.3.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -40,6 +41,7 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-svg-sprite-loader": "^1.2.1"
   }
 }
