--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
     "postcss": "^8.4.14",
+    "svg-sprite-loader": "^6.0.11",
     "tailwindcss": "^3.0.24",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5",
-    "vue-svg-sprite-loader": "^1.2.1"
+    "typescript": "~4.5.5"
   }
 }
