--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.22.8",
     "pinia": "^2.0.14",
+    "qrcode.vue": "^3.3.3",
     "register-service-worker": "^1.7.2",
     "uuid": "^8.3.2",
     "vue": "^3.2.13",
