--- a/package.json
+++ b/package.json
@@ -21,17 +21,13 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^6.1.0",
     "autoprefixer": "^9.8.8",
     "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "7.0.0",
     "postcss": "^7.0.39",
     "svg-sprite-loader": "^6.0.11",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
