--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.7.2",
     "uuid": "^8.3.2",
     "vue": "^3.2.13",
+    "vue-code-highlight": "^0.7.8",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
