--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "core-js": "^3.22.8",
     "pinia": "^2.0.14",
+    "prismjs": "^1.29.0",
     "qrcode.vue": "^3.3.3",
     "register-service-worker": "^1.7.2",
     "uuid": "^8.3.2",
     "vue": "^3.2.13",
-    "vue-code-highlight": "^0.7.8",
+    "vue-prism-editor": "^2.0.0-alpha.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
